# KubeTag

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: issue-triage.yml
artifacts/model/: README.md  label_schema.json  model_manifest.json  thresholds.json
scripts/: build_dataset.py
src/kubetag/: __init__.py  __main__.py  application.py  config.py  domain.py  logging_config.py  model_download.py  text_processing.py
src/kubetag/github/: client.py  events.py
src/kubetag/inference/: artifacts.py  base.py  development.py  factory.py  postprocessing.py  transformer.py
tests/: conftest.py
tests/fixtures/: issue_opened.json
tests/integration/: test_cli.py
tests/unit/: test_application.py  test_artifacts.py  test_build_dataset.py  test_client.py  test_config.py  test_events.py  test_inference.py  test_labels.py  test_postprocessing.py  test_text_processing.py
