[project]
name = "kubetag"
version = "0.1.0"
description = "Automatic multi-label classification for Kubernetes issues."
readme = "README.md"
authors = [
    { name = "AR21SM", email = "mahajanashishar21sm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
model = [
    "huggingface-hub>=0.34,<1",
    "numpy>=1.26,<3",
    "safetensors>=0.4,<1",
    "sentencepiece>=0.2,<1",
    "torch>=2.4,<3",
    "transformers==4.57.6",
]

[project.scripts]
kubetag = "kubetag.__main__:main"
kubetag-download-model = "kubetag.model_download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
